app/assets/stylesheets/main.css
/* ... */
.sidebar_box .sidebar_flag .sidebar_triangle.left {
  border-right: 9px solid #333;
  left: 0;
}
.sidebar_box .sidebar_flag .sidebar_triangle.right {
  border-left: 9px solid #333;
  right: 0;
}
.sidebar_box .sidebar_flag label.award,
.sidebar_box .sidebar_flag span.award {
  color: orange;
}
.sidebar_box h1 {
  font-size: 14px;
  line-height: 20px;
  margin-bottom: 10px;
  padding:4px;
}
.field_with_errors {
  padding: 0;
  display: inline-block;
}
/* Dashboard Profile Specific CSS Styling */

.right_search_box_container {
  background:#f8f8f8;
  float:right;
  width:160px;
}
.right_search_box_container .sidebar_box {
  margin-bottom:0px;
  padding-top:5px;
  border-radius: 1px;
  -moz-border-radius: 1px;
  -webkit-border-radius: 1px;
}
.right_search_box_container .sidebar_box .sidebar_number {
  padding-top:5px;
}

.right_search_box_container .sidebar_number p {
padding-top:40px;
padding-left: 15px;
padding-right:10px
}

.db_track_projects_awarded_sidebar .sidebar_box p {
  color:#6485b2;
  padding-top:25px;
  text-align:center;
}

.db_subscribe_sidebar p {
  padding: 5px 10px 0 10px;
}
.db_subscribe_sidebar form {
  margin-bottom:50px;
}
 
.db_subscribe_sidebar input.btn.subscribe {
  float:left;
  background: #f3cb2d;
  margin-left: 10px;
  padding: 5px 2px 5px 2px;
}

.db_subscribe_sidebar input.btn.pricing {
  float:right;
  background:#f3cb2d;
  margin-right: 20px;
  padding: 5px 2px 5px 2px;
}
.db_profile_views_sidebar p, 
.db_profile_views_sidebar .sidebar_number strong {
  padding-top:10px;
  padding-bottom:10px;
}
.db_invite_sidebar p {
  padding: 10px 0 0 20px;
}

.db_invite_sidebar .btn.success {
  font-weight:bold;
  text-transform:uppercase;
  width:220px;
}

.db_profile_your_ad_sidebar {
   background: transparent url('../images/new.png')  0 41px no-repeat;
   padding-top:5px;
}  
.db_profile_your_ad_sidebar p {
  padding: 10px 5px 0px 90px; 
}

.db_profile_your_ad_sidebar li {
  list-style:none;
  color:#4a6091;
  padding: 0 0 5px 175px;
}
.db_profile_member_ad_sidebar p {
   padding: 10px 5px 0px 85px; 
   border-top:1px solid #ccc;
}
.db_profile_member_ad_sidebar p.first {
   border-top:none;
}
.db_profile_member_ad_sidebar li {
  list-style:none;
  color:#4a6091;
  padding: 0 0 5px 175px;
}
.btn.large.primary.project {
  text-align:center;
  width:250px;
  margin-bottom:20px;
}  
.home_page .home_box,
.db_contractor_page .home_box, 
.db_developer_page .home_box {
  border: 3px solid #eee;
  position:relative;
  z-index:-2;
}
.db_developer_page .home_box,
.db-contractor_page .home_box {
  height:335px;
  border: 1px solid#d3d3d3;
   border-radius: 5px;
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
}

.home_page .search_box,
.db_developer_page .search_box,
.db_contractor_page .search_box {
  padding-top:15px;
  width:60%;
  margin: 20px 0 20px 0;
  position:relative;
  z-index:0;
}
.home_page .search_box {
  padding:10px;
  height:298px;
  width:432px;
}

.db_developer_page .search_box,
.db_contractor_page .search_box {
  float:left;
  padding: 10px;
}
.db_contractor_page .search_box table td,
.db_developer_page .search_box table td {
  border:none;
}

.home_page .search_box .background,
.db_contractor_page .search_box .background,
.db_developer_page .search_box .background {
	background: transparent url('/images/search_man.png') 0 0 no-repeat;
	position: absolute; 
	left: 118px; 
	top: -40px;
	width: 334px;
	height: 221px;
	z-index: -1;
}
/* Must be below above css */
.db_contractor_page .search_box .background,
.db_developer_page .search_box .background {
  left:144px;
}
.home_page .account_box {
  padding:10px 30px;
  margin-top:20px;
  margin-right:20px;
  width: 432px;
}
.home_page .account_box h2 {
color: #002358;
font-size: 22px;
font-weight: bold;
}
.home_page .account_box li {
 list-style:none;
 padding-bottom:5px;
}

.home_page .account_box  label{
  width:100%;
  text-align:left;
  text-transform:uppercase;
}
.home_page .home_page_sidebar .btn {
  width: 180px;
}
.home_page .home_page_sidebar .sidebar_box .btn {
  width: 200px;
}
.home_page .home_page_sidebar .sidebar_box label {
  width: auto;
}
.home_page .home_page_sidebar .sidebar_box input {
  width: 187px;
}
.home_page .home_page_sidebar .sidebar_box p {
  margin: 5px 10px;
}

.home_page .account_box  .field.text input{
  width:100%;
  padding:4px;
}
.home_page .account_box .btn.primary {
  margin-right:5px;
  float:left;
}
.home_page .account_box .terms {
  float: right;
  width: 210px;
  font-size: 14px;
}
.home_page .account_box .field.register {
  margin-top:20px;
  clear:both;
  padding-bottom:10px;
}
.home_page .account_box .cta {
  padding-top:15px;
}
.home_page .span10 {
  width: 474px;    
}
/* Project Page Non-Subscribed View Style */
.project_page .btn.subscribe {
  background: transparent url('/images/lock.png')0 no-repeat;
  background-color:#87C442;
  background:#87c442;
  color:#fff;
  text-shadow:none;
  }
  
.project_page  li.subscribe {
  color: #87c442;
  list-style:none;
}

.project_page li.locked_bid_breakdown {
  color:#fff;
  background-color:#87C442;
  background:#87c442;
  font-weight:bold;
}
.btn.primary {
  background-color:#FFB134;
  color:#fff;
  border-color:#E56F01;
  filter:  progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#FF8013', endColorstr='#FFB134'); /* IE6 & IE7 */
  background-image: -ms-linear-gradient(top, #FF8013 0%, #FFB134 100%);   /* IE*/  
  background-image: -moz-linear-gradient(top, #FF8013 0%, #FFB134 100%); /* Mozilla Firefox */
  background-image: -o-linear-gradient(top, #FF8013 0%, #FFB134 100%); /* Opera */  
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #FF8013), color-stop(1, #FFB134)); /* Webkit (Safari/Chrome 10) */ 
  background-image: -webkit-linear-gradient(top, #FF8013 0%, #FFB134 100%); /* Webkit (Chrome 11+) */ 
  background-image: linear-gradient(top, #FF8013 0%, #FFB134 100%); /* Proposed W3C Markup */
}
/* ... */

